<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="main_title">My Nanodegree Apps!</string>

    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>

    <string name="spotify_toast">This button will launch my Spotify Streamer App!</string>
    <string name="scores_toast">This button will launch my Scores App!</string>
    <string name="library_toast">This button will launch my Library App!</string>
    <string name="build_toast">This button will launch my Build it Bigger App!</string>
    <string name="xyz_toast">This button will launch my XYZ Reader App!</string>
    <string name="capstone_toast">This button will launch my Capstone App!</string>

</resources>
