<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/material_deep_teal_200"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:elegantTextHeight="false"
        android:height="@dimen/abc_action_bar_stacked_max_height"
        android:textColor="#ff094660"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_weight="0.05"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:textColor="#ff000000"
        android:backgroundTint="#ffffeed5"
        android:layout_weight="0.05"
        android:onClick="launchSpotifyApp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:textColor="#ff000000"
        android:backgroundTint="#ffffeed5"
        android:layout_weight="0.05"
        android:onClick="launchScoresApp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:textColor="#ff000000"
        android:backgroundTint="#ffffeed5"
        android:layout_weight="0.05"
        android:onClick="launchLibraryApp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:textColor="#ff000000"
        android:backgroundTint="#ffffeed5"
        android:layout_weight="0.05"
        android:onClick="launchBuildApp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:textColor="#ff000000"
        android:backgroundTint="#ffffeed5"
        android:layout_weight="0.05"
        android:onClick="launchReaderApp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:backgroundTint="#ffbb39ff"
        android:layout_weight="0.05"
        android:onClick="launchCapstoneApp" />

</LinearLayout>
